--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Bookstore"
         tools:targetApi="31">
         <activity
+            android:name=".book_state"
+            android:exported="false" />
+        <activity
+            android:name=".book_manager"
+            android:exported="false" />
+        <activity
+            android:name=".menuManager"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
