--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'androidx.activity:activity:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
 }
